# machi

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
include/: Camera.hpp  Engine.hpp  EventManager.hpp  InputManager.hpp  Logger.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Utils.hpp  WindowManager.hpp  stb_image.h
resources/shaders/: main.frag.glsl  main.vert.glsl
resources/textures/wood_oak_texture/: Poliigon_WoodVeneerOak_7760.mtlx
shaders/: main.frag.glsl  main.vert.glsl
src/: Camera.cpp  Engine.cpp  EventManager.cpp  InputManager.cpp  Logger.cpp  Shader.cpp  Texture.cpp  Utils.cpp  WindowManager.cpp  main.cpp
